--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : https://www.linkedin.com/in/v%C3%ADctor-manuel-s%C3%A1nchez-cartagena-618a5814/
   orcid            : #orcid/yourorcidurl"
   pinterest        :
   soundcloud       :
