--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Víctor M. Sánchez-Cartagena"
-  avatar           : "profile.png"
+  avatar           : "foto-perfil.jpg"
   bio              : "Assistant professor at University of Alicante. Machine Translation and Deep Learning"
   location         : "Alacant, Spain"
   employer         :
